# PomoBlock

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.node.json  tsconfig.ui.json  unsafe.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: app.json  calendars.json  overrides.json  policies.json  routines.json  templates.json
src-tauri/sql/: schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: audit_log.rs  block_calendar_events.rs  block_generation.rs  block_operations.rs  block_service.rs  bootstrap.rs  calendar_runtime.rs  calendar_services.rs  calendar_setup.rs  calendar_sync.rs  calendar_window.rs  commands.rs  configured_block_plans.rs  configured_modules.rs  configured_recipes.rs  configured_routines.rs  external_edit_service.rs  id_factory.rs  mod.rs  oauth.rs  policy_service.rs  pomodoro_log_store.rs  pomodoro_service.rs  pomodoro_session_plan.rs  reflection_service.rs  routine_sync_service.rs  studio_template_application.rs  task_runtime.rs  task_service.rs  time_slots.rs
src-tauri/src/application/commands/: auth.rs  blocks.rs  bootstrap.rs  calendar.rs  catalog.rs  legacy.rs  mod.rs  pomodoro.rs  reflection.rs  regression_tests.rs  routines.rs  state.rs  tasks.rs
src-tauri/src/application/test_support/: mod.rs  (+4 more)
src-tauri/src/domain/: models.rs
src-tauri/src/infrastructure/: calendar_cache.rs  config.rs  credential_store.rs  error.rs  event_mapper.rs  git_backed_config.rs  google_calendar_client.rs  local_repository.rs  mod.rs  oauth_client.rs  storage.rs  sync_state_repository.rs
(+234 files in other folders)
